// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SignUpPage /> should NOT render SignUpPage when user IS authenticated 1`] = `<main />`;

exports[`<SignUpPage /> should render SignUpPage when user IS NOT authenticated 1`] = `
<main>
  <div
    className="sign-up-page"
  >
    <div>
      <form
        noValidate={true}
        onSubmit={[Function]}
      >
        <div
          className=""
        >
          <div
            className="form-item"
          >
            <label
              htmlFor="firstName"
            >
              Name
            </label>
            <input
              className="textfield"
              id="firstName"
              name="firstName"
              onBlur={[Function]}
              onChange={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              onFocus={[Function]}
              placeholder="Name"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          className=""
        >
          <div
            className="form-item"
          >
            <label
              htmlFor="email"
            >
              E-mail
            </label>
            <input
              className="textfield"
              id="email"
              name="email"
              onBlur={[Function]}
              onChange={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              onFocus={[Function]}
              placeholder="E-mail"
              type="email"
              value=""
            />
          </div>
        </div>
        <div
          className=""
        >
          <div
            className="form-item"
          >
            <label
              htmlFor="password"
            >
              Password
            </label>
            <input
              className="textfield"
              id="password"
              name="password"
              onBlur={[Function]}
              onChange={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              onFocus={[Function]}
              placeholder="Password"
              type="password"
              value=""
            />
          </div>
        </div>
        <div
          className=""
        >
          <div
            className="form-item"
          >
            <label
              htmlFor="confirmPassword"
            >
              Repeat password
            </label>
            <input
              className="textfield"
              id="confirmPassword"
              name="confirmPassword"
              onBlur={[Function]}
              onChange={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              onFocus={[Function]}
              placeholder="Repeat password"
              type="password"
              value=""
            />
          </div>
        </div>
        <div>
          <button
            disabled={true}
            type="submit"
          >
            Sign Up
          </button>
        </div>
      </form>
    </div>
  </div>
</main>
`;

exports[`<SignUpPage /> should render SignUpPage with error message when errorMessage is in the props 1`] = `
<main>
  <div
    className="sign-up-page"
  >
    <div>
      <div>
        Ooops, something went wrong, please try again later.
      </div>
      <form
        noValidate={true}
        onSubmit={[Function]}
      >
        <div
          className=""
        >
          <div
            className="form-item"
          >
            <label
              htmlFor="firstName"
            >
              Name
            </label>
            <input
              className="textfield"
              id="firstName"
              name="firstName"
              onBlur={[Function]}
              onChange={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              onFocus={[Function]}
              placeholder="Name"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          className=""
        >
          <div
            className="form-item"
          >
            <label
              htmlFor="email"
            >
              E-mail
            </label>
            <input
              className="textfield"
              id="email"
              name="email"
              onBlur={[Function]}
              onChange={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              onFocus={[Function]}
              placeholder="E-mail"
              type="email"
              value=""
            />
          </div>
        </div>
        <div
          className=""
        >
          <div
            className="form-item"
          >
            <label
              htmlFor="password"
            >
              Password
            </label>
            <input
              className="textfield"
              id="password"
              name="password"
              onBlur={[Function]}
              onChange={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              onFocus={[Function]}
              placeholder="Password"
              type="password"
              value=""
            />
          </div>
        </div>
        <div
          className=""
        >
          <div
            className="form-item"
          >
            <label
              htmlFor="confirmPassword"
            >
              Repeat password
            </label>
            <input
              className="textfield"
              id="confirmPassword"
              name="confirmPassword"
              onBlur={[Function]}
              onChange={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              onFocus={[Function]}
              placeholder="Repeat password"
              type="password"
              value=""
            />
          </div>
        </div>
        <div>
          <button
            disabled={true}
            type="submit"
          >
            Sign Up
          </button>
        </div>
      </form>
    </div>
  </div>
</main>
`;

exports[`<SignUpPage /> should render SignUpPage with loading indicator when loading is in the props 1`] = `
<main>
  <div
    className="sign-up-page"
  >
    <div>
      <div>
        Processing... Please wait.
      </div>
      <form
        noValidate={true}
        onSubmit={[Function]}
      >
        <div
          className=""
        >
          <div
            className="form-item"
          >
            <label
              htmlFor="firstName"
            >
              Name
            </label>
            <input
              className="textfield"
              id="firstName"
              name="firstName"
              onBlur={[Function]}
              onChange={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              onFocus={[Function]}
              placeholder="Name"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          className=""
        >
          <div
            className="form-item"
          >
            <label
              htmlFor="email"
            >
              E-mail
            </label>
            <input
              className="textfield"
              id="email"
              name="email"
              onBlur={[Function]}
              onChange={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              onFocus={[Function]}
              placeholder="E-mail"
              type="email"
              value=""
            />
          </div>
        </div>
        <div
          className=""
        >
          <div
            className="form-item"
          >
            <label
              htmlFor="password"
            >
              Password
            </label>
            <input
              className="textfield"
              id="password"
              name="password"
              onBlur={[Function]}
              onChange={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              onFocus={[Function]}
              placeholder="Password"
              type="password"
              value=""
            />
          </div>
        </div>
        <div
          className=""
        >
          <div
            className="form-item"
          >
            <label
              htmlFor="confirmPassword"
            >
              Repeat password
            </label>
            <input
              className="textfield"
              id="confirmPassword"
              name="confirmPassword"
              onBlur={[Function]}
              onChange={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              onFocus={[Function]}
              placeholder="Repeat password"
              type="password"
              value=""
            />
          </div>
        </div>
        <div>
          <button
            disabled={true}
            type="submit"
          >
            Sign Up
          </button>
        </div>
      </form>
    </div>
  </div>
</main>
`;
